2003-04-16  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/vlad.h :

	  - Added a result macro to convert numeric codes to string.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added a skeletal evaluate_query() function that calls on smodels.

	* common/vlad.h :
	* main/vlad.cpp :
	* parser/parser.h :
	* parser/parser.y :

	  - Moved yyerror() and yywarn() back to parser.y where it makes more
	    sense.

	  - Added modes: NLP and SMODELS. One generates a normal logic program
	    and the other links with the smodels library to evaluate a query.

	* common/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Added OBJECTS variable.

	  - Now vlad is linked against smodels (if configured with
	    --with-smodels).

	* kb/wrapper.h :
	* kb/wrapper.cpp :

	  - Added smodels wrapper class.

	* configure :
	* configure.ac :

	  - Fixed relative/absolute path problem with --with-smodels.

	  - Smodels path now included in C/CXXFLAGS and LDFLAGS.

2003-04-15  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* README :

	  - Updated readme.

	* configure :
	* configure.ac :

	  - Fixed smodels checking mechanism.

2003-04-14  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :
	* common/Makefile.in :
	* common/list.cpp :
	* common/numberlist.cpp :
	* common/numberlist.h :
	* common/stringlist.cpp :
	* common/stringlist.h :
	* kb/Makefile.in :
	* kb/atom.cpp :
	* kb/atom.h :
	* kb/consttab.cpp :
	* kb/consttab.h :
	* kb/expression.cpp :
	* kb/expression.h :
	* kb/kb.cpp :
	* kb/kb.h :
	* kb/sequence.cpp :
	* kb/sequence.h :
	* kb/symtab.cpp :
	* kb/symtab.h :
	* kb/transtab.cpp :
	* kb/transtab.h :
	* main/Makefile.in :
	* main/vlad.cpp :
	* parser/Makefile.in :
	* parser/parser.y :
	* parser/scanner.l :

	  - Changed include statements to have the prefix vlad/* to prevent
	    inclusion of other header files of the same name.

	* Makefile.in :
	* configure :
	* configure.ac :
	* common/Makefile.in :
	* kb/Makefile.in :