@@ -5,6 +5,7 @@
 
 #include <cstdlib>
 #include <cstddef>
+#include <cstdio>
 #include <new>
 
 #include <config.h>
@@ -41,6 +42,23 @@ int wrapper::init()
     return VLAD_MALLOCFAILED;
 
   initialised = true;
+
+  return VLAD_OK;
+}
+
+int wrapper::add_atom(unsigned int a)
+{
+  Atom *tmp_atom;
+  char tmp_name[16];
+
+  if (!initialised)
+    return VLAD_UNINITIALISED;
+
+  if ((tmp_atom = pr_api->new_atom()) == NULL)
+    return VLAD_MALLOCFAILED;
+
+  sprintf(tmp_name, "%d", a);
+  pr_api->set_name(tmp_atom, tmp_name);
 
   return VLAD_OK;
 }
